client/app/right/right.css
.rpanel {
    width : 480px;
    position: absolute;
    right: 0;
    top: 40px;
    bottom: 0;
    background-color: #fff;
    z-index: 0;
    border-left: 1px solid #e1e1e1;
    border-top: 1px solid #e1e1e1;
}
.rpanel.extend {
    background-color: #f2f2f2;
}
.rpanel__background {
    position: absolute;
    width: 480px;
    top: 40px;
    right: 0;
    bottom: 0;
    z-index: -2;
}
.rpanel__background.extend {
    background-color: #f2f2f2;
}
.rpanel__background-body {
    position: absolute;
    top: 35px;
    left: 15px;
    right: 15px;
    bottom: 50px;
    overflow: hidden;
    background: #fff;
}
.rpanel__loading {
    background: url(../../assets/images/jd_loading.gif) 100% / 100px no-repeat;
    width: 100px;
    height: 100px;
    position: absolute;
    top: 50%;
    left: 50%;
    margin: -50px 0 0 -50px;
    z-index: 90;
}
.rpanel-show .msgs, .rpanel-show .footer {
    margin-right: 480px;
}
.rpanel .panel-title-container {
    background-color: rgba(0,0,0,0);
}
.rpanel-header a { color: #555459; }
.rpanel-header a:hover { text-decoration: none; color: #31c08a; }
.rpanel-header-heading { position: relative; font-weight: 700; }
.rpanel-header-heading__back { vertical-align:middle; }
.rpanel-header-heading__back:hover { color: #31c08a; }
.rpanel-header-heading__back i { font-size: 14px; }

.rpanel-header-heading__types { position: relative; font-size: 15px; line-height: inherit; color: #333; }
.rpanel-header-heading__types__more { color:#9e9ea6; }
.rpanel-header-heading__types__more:hover { color: black; }
.rpanel-header-heading__types__dropdown {
    margin-top: 8px;
    top: 25px;
}
.rpanel-header-heading__files {
    position: absolute;
    right: 15px;
    top: 0px;
    font-size: 13px;
    color: #333;
}
.rpanel-header-heading__files-add {
    color: #31c08a;
    font-size: 14px;
}
.rpanel-header-headding__files-add__more {
    left: 0;
}



.rpanel-header-toolbar { position: relative; border-bottom: 1px solid #ebebeb; }
.rpanel-header-toolbar .rpanel-body-search {

}

.rpanel-header-toolbar .rpanel-body-search .add-on-left {
    height: 22px;
    border-right: 0;
    border-top-left-radius: 22px;
    border-bottom-left-radius: 22px;
    padding: 3px 0 0 6px;
    font-size: 12px;
}

.rpanel-header-toolbar .rpanel-body-search .rpanel-body-search__input {
    height: 22px;
    background-color: #f2f2f2;
    border: 1px solid #d2d2d2;
    border-radius: 22px;
    font-size: 12px;
    color: #999;
    line-height: 15px;
    padding: 4px 12px 4px 30px;
}
.rpanel-header-toolbar .rpanel-body-search .add-on-right {
    top: 14px;
    right: 19px;
}
.advanced-search-option-container {
    background-color: white;
    padding: 0 15px;
    padding-bottom: 55px;
}
.collapse.in.advanced-search-option-container {
    height: 44px;
}
.advanced-search-option__category {
    float: left;
    width: 31%;
    margin-right: 3%;
}
.advanced-search-option__category:last-child {
    margin-right: 0;
}
.advanced-search-option__category select {
    width: 100%;
    border-radius: 0;
    border: 1px solid #d2d2d2;
    height: 24px;
    font-size: 12px;
    background-color: white;
}
.advanced-search-option__title {
    font-size: 12px;
    color: #333;
    margin-bottom: 4px;
}
.rpanel-header-toolbar__users { vertical-align: baseline; }

.rpanel-header-toolbar .btn-user { min-width: 80px; }
.rpanel-header-toolbar .dropdown-toggle { display: inline-block; }



#file_list_button {
    position: absolute;
    top: 0;
    right: 0;
    max-width: 100%;
    height: 33px;
    overflow: hidden;
    font-size: 999px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    cursor: inherit;
    display: block;
}


.file_list__item .file-item-header .filetype_icon,
.file_list__item .file-item-header .user-thumb-sm {
    -moz-opacity: .8;
    -khtml-opacity: .8;
    -webkit-opacity: .8;
    opacity: .8;
    -ms-filter: alpha(opacity=80);
    filter: alpha(opacity=80);
    -webkit-transitionDISABLED: .1s .2s ease-out;
    -moz-transitionDISABLED: .1s .2s ease-out;
    -o-transitionDISABLED: .1s .2s ease-out;
    transitionDISABLED: .1s .2s ease-out;
    -webkit-transitionDISABLED: .1s;
    -moz-transitionDISABLED: .1s;
    -o-transitionDISABLED: .1s;
    transitionDISABLED: .1s;
}

.file-list {
    background: none;
}


.file-list__item {
    position: relative;
    clear: both;
    -webkit-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
    user-select: text;
    background: white;
    padding: 8px;
    border-bottom: 1px solid #ebebeb;
    min-height: 65px;

    -webkit-animation: opacIn 1s; /* Chrome, Safari, Opera */
    animation: opacIn 1s;
}
.file-list__item .pull-left {
    margin-right: 10px;
}
.file-list__item:hover {
    background: #eefcf7;
}

.file-item-type {
    float: left;
    font-size: 10px;
    text-align: center;
    line-height: 10px;
}

.file-item-meta__type {
    margin: 4px;
    margin-bottom: 3px;
}
.file-item-meta__size {
    color: #666;
}
.file-item-body {
    padding-left: 75px;
    min-height: 65px;
    position: relative;
    padding-right: 14px;
}
.file-item-body__author__time {
    width: 100%;
    text-align: left;
    padding-top: 2px;
    line-height: 30px;
}
.file-item-body-author {
    font-size: 13px;
    color: #333;
    margin-right: 3px;
}
.file-item-body-author:hover {
}
.file-item-meta__createtime {
    font-size: 12px;
    color: #999;
}
.file-item-body__title {
    position: relative;
    -ms-word-wrap: break-word;
    word-wrap: break-word;
    margin: 4px 0;
    font-size: 15px;
    color: #333;
}
.share-modal-file-item-body__title{
    max-width: 100%;
}
.file-item-body-title {
    color: #333;
    /*font-weight: 700;*/
    max-width: 285px;
    vertical-align: top;
    padding-bottom: 2px;
}
.file-item-body-title:hover {
    text-decoration: underline;
}

.file-item-body-title__more {
    position: absolute;
    top: 10px;
    right: 0;
    color:#999;
}
.file-item-body-title__more:hover{
    color: #333;
}

.file_action_dropdown {
    left: auto;
    right: 0;
    top: 14px;
}

.file-item {
    padding: 1rem .5rem;
}
.file-item-meta__shared {
    color: #31c08a;
    margin-left: 3px;
    border-bottom: 1px solid #31c08a;
    word-wrap: break-word;
}
.file-item-meta__shared:hover {
    color: #008F59;
    border-color: #008F59;
}

.file-item-meta-open__public {
    color: #31c08a;
}
.file-item-meta-open__public:hover {
    text-decoration: none;
    color: #31c08a;
    border-bottom: 1px solid #31c08a;
}
.file-item-header {
    position: relative;
    min-height: 40px;
    margin-bottom: .25rem;
}
.file-item-header__title {
    padding-top: 15px;
    padding-left: 72px;
    font-weight: 900;
    font-size: .9rem;
}

.file-item-body__type-image__thumb {
    margin-top: 10px;
    max-width: 170px;
    max-height: 90px;
}
.file-item-body__type-other {

}
.file-item-meta {
    text-align: left;
}

.file-item-meta .glyphicon {
    font-size: .7rem;
}

.scroll_loading_container_background {
    background-color: rgb(238, 252, 247);
    opacity: 1;
}
.scroll_loading_bg {
    display: none;
}

.scroll_loading_bar {
    left: auto;
    margin: auto !important;
}

.loading_container.file {
    position: absolute;
    display: none;
}
.loading_container_background.file {
    display: none;
}

.opac_in {
    -webkit-animation: opacIn 0.5s; /* Chrome, Safari, Opera */
    animation: opacIn 0.5s;
}
/* Chrome, Safari, Opera */
@-webkit-keyframes opacIn {
    from {opacity: 0;}
    to {opacity: 1;}
}
/* Standard syntax */
@keyframes opacIn {
    from {opacity: 0;}
    to {opacity: 1;}
}

.opac_out {
    -webkit-animation: opacOut 0.5s; /* Chrome, Safari, Opera */
    animation: opacOut 0.5s;
}

/* Chrome, Safari, Opera */
@-webkit-keyframes opacOut {
    from {opacity: 1;}
    to {opacity: 0;}
}
/* Standard syntax */
@keyframes opacOut {
    from {opacity: 1;}
    to {opacity: 0;}
}

.from_right {
    -webkit-animation: fromRight 0.5s; /* Chrome, Safari, Opera */
    animation: fromRight 0.5s;
}

/* Chrome, Safari, Opera */
@-webkit-keyframes fromRight {
    0%      { right: -480px; }
    25%     { right: -320px; }
    50%     { right: -160px; }
    100%    { right: 0px; }
}
/* Standard syntax */
@keyframes fromRight {
    0%      { right: -480px; }
    25%     { right: -320px; }
    50%     { right: -160px; }
    100%    { right: 0px; }
}


/* Chrome, Safari, Opera */
@-webkit-keyframes toRight {
    0%      { right: 0px; }
    25%     { right: -160px; }
    50%     { right: -320px; }
    100%    { right: -480px; }
}
/* Standard syntax */
@keyframes toRight {
    0%      { right: 0px; }
    25%     { right: -160px; }
    50%     { right: -320px; }
    100%    { right: -480px; }
}


.opacOut_hidden {
    -webkit-animation: opacOut_hidden 0.5s; /* Chrome, Safari, Opera */
    animation: opacOut_hidden 0.5s;
    display: none;
}


/* Chrome, Safari, Opera */
@-webkit-keyframes opacOut_hidden {
    from {opacity: 1;}
    to {opacity: 0; visibility: hidden !important; display: none !important;}
}
@keyframes opacOut_hidden {
    from {opacity: 1;}
    to {opacity: 0; visibility: hidden !important; display: none !important;}
}

